src/components/footer/Footer.css
.footer {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 60px 60px;
  grid-template-areas:
    "over"
    "under";
  border-top: 1px solid black;
  background-color: white;
  padding: 10px;
  font-weight: 600;
  position: static;
  width: 100vw;
  bottom: 0;
}

.over {
  grid-area: over;
  display: flex;
  justify-content: center;
  align-items: center;
}

.under {
  grid-area: under;
  display: flex;
  justify-content: center;
  justify-content: space-evenly;
  align-items: center;
}

.footer a {
  font-display: none;
  color: black;
}

a:link {
  text-decoration: none;
}
.b:hover {
  background-color: rgba(54, 54, 54, 1);
  color: white;
  border-radius: 5px;
}

/*===============================================*/
/* Mobile */
@media screen and (max-width: 599px) {
  .footer-desktop {
    display: none;
  }
}

/*===============================================*/
/* Desktop */
@media screen and (min-width: 600px) {
  .over,
  .under {
    display: none;
  }

  .footer {
    display: flex;
    border-top: 1px solid black;
    background-color: white;
    padding: 10px;
    font-weight: 600;
    justify-content: center;
    
  }
  .footer-desktop {
    display: flex;
    gap: 20px;
  }
}

